--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,1 +1,16 @@
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap");
+
 @import "tailwindcss";
+
+@theme {
+   --font-main: "Outfit", sans-serif;
+   --color-primary: #1e40af;
+}
+
+* {
+   @apply font-main;
+}
+
+::-webkit-scrollbar {
+   @apply hidden;
+}
